# rtcqs

./: LICENSE  README.md  README.rst  pyproject.toml  resources.py  rtcqs.desktop  rtcqs.py  rtcqs_gui.py  rtcqs_simple_gui.py  setup.cfg
.forgejo/resources/: Dockerfile
.forgejo/workflows/: action.yml
src/rtcqs/: __init__.py  resources.py  rtcqs.py  rtcqs_gui.py  rtcqs_qt_gui.py
