[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rtcqs"
version = "0.6.0"
description = "Linux audio performance analyzer"
readme = {file = "README.rst", content-type = "text/x-rst"}
authors = [{ name = "Jeremy Jongepier", email = "jeremy@autostatic.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Topic :: Utilities",
    "Topic :: System :: Installation/Setup",
]
keywords = ["real-time", "priorities", "audio", "limits"]
dependencies = [
    "PySimpleGUI == 4.60.5",
]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://codeberg.org/rtcqs/rtcqs"

[project.scripts]
rtcqs = "rtcqs.rtcqs:main"
rtcqs_gui = "rtcqs.rtcqs_gui:main"
