[metadata]
name = rtcqs
version = 0.5.3
author = Jeremy Jongepier
author_email = jeremy@autostatic.com
description = Linux audio performance analyzer
long_description = file: README.rst
url = https://codeberg.org/rtcqs/rtcqs
project_urls =
    Bug Tracker = https://codeberg.org/rtcqs/rtcqs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: Utilities
    Topic :: System :: Installation/Setup

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    PySimpleGUI

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rtcqs = rtcqs:rtcqs.main
    rtcqs_gui = rtcqs:rtcqs_gui.main
